--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
     <title>Autor Daniel Lamek nr albumu 178838 !</title>
 </head>
 <body>
+Autor Daniel Lamek nr albumu 178838<br><br>
 Tutaj będzie treść strony generowanej przez aplikację napisaną w IntelliJ IDEA i Spring Boot.<br>
 Aplikacja wyświetla zapisana listę utworów z linkami do ich wideoklipów.<br><br><br>
 
